examples/typechecking/affine.an
// A nonCopy type for testing affine semantics
type Resource = id: I32

consume _ = ()

// NonCopy type used twice should error on the first (nonlast) use 
use_twice () =
    r = Resource 1
    consume r
    consume r

// A type can be used multiple times if there is a `Copy t` impl for it 
copy_twice () =
    x = 1
    a = x + 1
    b = x + 2
    a + b

// Taking a reference does not count as a move
ref_then_use () =
    r = Resource 2
    _r_ref = ref r
    consume r

// Taking a reference to an already-moved value should error
use_then_ref () =
    r = Resource 7
    consume r
    consume (ref r)

// Non-copy value used in both if/else branches (each is a move)
use_in_both_branches (cond: Bool) =
    r = Resource 3
    if cond
    then consume r
    else consume r

// Non-copy value used before if that also uses it should error 
use_before_branch (cond: Bool) =
    r = Resource 4
    consume r
    if cond
    then consume r
    else ()

// Closures capture by reference currently so this is fine, but should be an error if we capture by move
capture_then_use () =
    r = Resource 5
    _f () = consume r
    consume r

// A copyable function parameter used multiple times is fine 
copy_param (x: I32) =
    a = x + 1
    b = x + 2
    a + b

take_two (_a: Resource) (_b: Resource) : Unit = ()

// Non-copy value passed as two arguments should error on first arg 
double_arg () =
    r = Resource 6
    take_two r r

type NonCopy = x: Unit

type Two t =
    one: t
    two: t

// Decompose a non-copy type into each field separately
decompose_fields () =
    c = Two (Two (NonCopy ()) (NonCopy ())) (Two (NonCopy ()) (NonCopy ()))
    _ = c.one.one
    _ = c.one.two
    _ = c.two
    _ = c.two.two

// Method for testing notes in error messages when they are too far away
// to show in the same span
move_long_ago () =
    r = Resource 42
    consume r
    ()
    ()
    ()
    ()
    ()
    take_two r r

main () = ()

// args: --check --no-color
// expected exit status: 1
// expected stderr:
// examples/typechecking/affine.an:10:13
//  8 |     r = Resource 1
//  9 |     consume r	// note: r was previously moved here
//    |             -
// 10 |     consume r	// error: Use of moved value r
//    |             ^
// 
// examples/typechecking/affine.an:29:18
// 27 |     r = Resource 7
// 28 |     consume r	// note: r was previously moved here
//    |             -
// 29 |     consume (ref r)	// error: Use of moved value r
//    |                  ^
// 
// examples/typechecking/affine.an:43:18
// 40 |     r = Resource 4
// 41 |     consume r	// note: r was previously moved here
//    |             -
// 42 |     if cond
// 43 |     then consume r	// error: Use of moved value r
//    |                  ^
// 44 |     else ()
// 
// examples/typechecking/affine.an:63:16
// 62 |     r = Resource 6
//    |     // error: Use of moved value r
//    |     // note: r was previously moved here
// 63 |     take_two r r
//    |              - ^
// 
// examples/typechecking/affine.an:77:14
// 75 |     _ = c.one.two
// 76 |     _ = c.two	// note: c.two.two was previously moved here
//    |          ----
// 77 |     _ = c.two.two	// error: Use of moved value c.two.two
//    |              ^^^^
// 
// examples/typechecking/affine.an:89:14
// 82 |     r = Resource 42
// 83 |     consume r	// note: r was previously moved here
//    |             -
// 84 |     ()
// .. | 
// 88 |     ()
// 89 |     take_two r r	// error: Use of moved value r
//    |              ^
// 
// Found 6 errors and 0 warnings

